2015-01-26  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c (int
	SRAM_speed): Use clock_gettime() instead gettimeofday() for
	better accuracy.
	* apps/fft2d/host/src/fft2d_host.c (int main): Likewise.
	* apps/fft2d/host/src/fftw.c: Likewise.
	* apps/matmul-16/host/src/matmul_host.c (void
	matmul_strassen): Likewise.
	* apps/matmul-64/host/src/matmul_host.c: Likewise.
	* apps/e-bandwidth-test/build.sh: Link host binary with -lrt.
	* apps/fft2d/build.sh: Likewise.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* scripts/build_and_test_all.sh: Improve testing and output.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* labs/hardware_barrier/src/emain.c (int main): Add
	synchronization point between first E core and host so that
	the host can read out the core iteration counters in a
	race-free manner.
	* labs/hardware_barrier/src/main.c: Likewise.
	* labs/hardware_barrier/src/hwb_isr.s: Remove.
	* labs/hardware_barrier/build.sh: Remove all references to
	hwb_isr.s.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* cpu/mutex/src/mutex_test.c (int main): Update allowed clock
	cycle range for new ESDK. Use exit status to report errors.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/test.sh: Forward program's exit status.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/host/src/matmul_host.c (int main): Return
	with non-zero exit status on detected performance regressions.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c (int main):
	Return with non-zero exit code on detected errors.
	(int SRAM_speed): Report performance regressions.
	(int EPI_speed): Return error if Epiphany test did not run to
	completion

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* softcache/basic_math/Makefile: Fix cross compilation paths.
	* softcache/math_example/Makefile: Likewise.

2015-01-24  Ola Jeppsson  <ola@adapteva.com>
